--- a/client/views/signUp.ejs
+++ b/client/views/signUp.ejs
@@ -5,10 +5,11 @@
     
     <body>
         <form method="POST" action="/signup">
-            <input type="text" placeholder="First Name" name="fName">
-            <input type="text" placeholder="Last Name" name="lName">
-            <input type="email" placeholder="email" name="email">
-            <input type="password" placeholder="password" name="password">
+            <input required type="text" placeholder="First Name" name="fName">
+            <input required type="text" placeholder="Last Name" name="lName">
+            <input required type="email" placeholder="email" name="email">
+            <input required type="password" placeholder="password" name="password">
+            <button type="submit">Sing Up</button>
         </form>
     </body>
 </html>
