--- a/client/views/login.ejs
+++ b/client/views/login.ejs
@@ -9,5 +9,10 @@
             <input required type="password" placeholder="password" name="password">
             <button type="submit">Login</button>
         </form>
+
+        <form method="GET" action="/signup">
+            <button>Sign Up</button>
+        </form>
+    
     </body>
 </html>
