--- a/client/views/form.ejs
+++ b/client/views/form.ejs
@@ -2,6 +2,6 @@
     <head></head>
 
     <body>
-        <p>Welcome <%= user.fname %></p>
+        <p>Welcome <%= user.fName %></p>
     </body>
 </html>
