--- a/client/views/signup.ejs
+++ b/client/views/signup.ejs
@@ -28,28 +28,38 @@
         </div>
       </div>
       <div class="formcontainer">
-        <form class="regform" action="/login" method="POST">
-          <div class="head">Welcome Back</div>
+        <form class="regform" action="/signup" method="POST">
+          <div class="head">Registration</div>
+          <input
+            class="formip"
+            type="text"
+            name="fName"
+            placeholder="First Name"
+          />
+          <input
+            class="formip"
+            type="text"
+            name="lName"
+            placeholder="Last Name"
+          />
           <input
             class="formip"
             type="email"
             name="email"
             id="email"
-            placeholder="Enter Regitered Email"
-            required
+            placeholder="Enter Your Email"
           />
           <input
             class="formip"
             type="password"
             name="password"
             id="password"
-            placeholder="Enter Your Password"
-            required
+            placeholder="Choose A Password"
           />
-          <input class="formbtn" type="submit" value="Login" />
-          <a href="/signup">New User? Register here</a>
+          <input type="submit" class="formbtn" value="Register" />
+          <a href="/login">Already Registered? Login here</a>
         </form>
-        <img src="/assets/login.jpg" alt="gbuimg" width="50%" />
+        <img src="/assets/reg.jpg" alt="gbuimg" width="50%" />
       </div>
     </div>
     <footer>
