--- a/client/views/form.ejs
+++ b/client/views/form.ejs
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="formcontainer">
-        <form class="aform" action="">
+        <form class="aform" action="/form" method="POST">
           <div class="sec">
             <div class="sec-heading">Personal Details</div>
             <div class="sub-sec">
@@ -36,7 +36,7 @@
                 <label for="fname">First Name</label>
                 <input
                   type="text"
-                  name=""
+                  name="fName"
                   id="fname"
                   value="<%= user.fname %>"
                   disabled
@@ -44,13 +44,13 @@
               </div>
               <div class="mini-sec">
                 <label for="sname">Second Name</label>
-                <input type="text" name="" id="sname" />
+                <input type="text" name="sName" id="sname" />
               </div>
               <div class="mini-sec">
                 <label for="lname">Last Name</label>
                 <input
                   type="text"
-                  name=""
+                  name="lName"
                   value="<%= user.lname %>"
                   id="lname"
                   disabled
