created model for form data

--- a/client/views/form.ejs
+++ b/client/views/form.ejs
@@ -38,7 +38,7 @@
                   type="text"
                   name="fName"
                   id="fname"
-                  value="<%= user.fname %>"
+                  value="<%= user.fName %>"
                   disabled
                 />
               </div>
@@ -51,7 +51,7 @@
                 <input
                   type="text"
                   name="lName"
-                  value="<%= user.lname %>"
+                  value="<%= user.lName %>"
                   id="lname"
                   disabled
                 />
@@ -122,7 +122,7 @@
                   type="email"
                   name="email"
                   id="email"
-                  value="<%= user.emailid %>"
+                  value="<%= user.email %>"
                   disabled
                 />
               </div>
