--- a/client/views/form.ejs
+++ b/client/views/form.ejs
@@ -62,7 +62,7 @@
               </div>
               <div class="mini-sec">
                 <label for="sex">Sex</label>
-                <select name="sex" id="sex" value="<%= user.sex %>">
+                <select name="sex" id="sex">
                   <option value="Male">Male</option>
                   <option value="Female">Female</option>
                   <option value="Other">Other</option>
